delete log use Helheim
