# src/web/controllers/logController.go
@@ -3,7 +3,6 @@ package controllers
 import (
 	"fmt"
 	"github.com/WFallenDown/Helheim"
-	"github.com/WFallenDown/Raven/src/log"
 	"github.com/gin-gonic/gin"
 	"net/http"
 )
@@ -14,19 +13,19 @@ import (
 // @Description 描述信息
 // @Security Bearer
 // @Produce  json
-// @Success 200 {object} []log.Record
+// @Success 200 {object} []Helheim.Record
 // @Failure 400 {object} ReturnData {"Successful":true,"data":null,"Error":"", Message:""}
 // @Failure 500 {object} ReturnData {"Successful":true,"data":null,"Error":"", Message:""}
 // @Router /v1/Bill/GetLogTable [post]
 func GetLogTable(c *gin.Context) {
-	var data = log.RecordList{}
+	var data = Helheim.RecordList{}
 	if err := c.ShouldBindJSON(&data); err != nil {
-		Helheim.Writer(log.Error, err)
+		Helheim.Writer(Helheim.Error, err)
 		c.JSON(http.StatusBadRequest, ReturnData{Message: "参数错误", Error: err.Error(), Successful: false})
 		return
 	}
 
-	if err := log.GetLog(&data); err != nil {
+	if err := Helheim.GetLog(&data); err != nil {
 		fmt.Println(err)
 		c.JSON(http.StatusInternalServerError, ReturnData{Message: "参数错误", Error: err.Error(), Successful: false})
 		return
