# src/web/docs/swagger.json
@@ -190,7 +190,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/log.Record"
+                                "$ref": "#/definitions/Helheim.Record"
                             }
                         }
                     },
@@ -831,7 +831,7 @@
                 }
             }
         },
-        "log.Record": {
+        "Helheim.Record": {
             "type": "object",
             "properties": {
                 "err": {
@@ -839,11 +839,11 @@
                 },
                 "timePoint": {
                     "description": "执行时间点",
-                    "$ref": "#/definitions/log.TimePoint"
+                    "$ref": "#/definitions/Helheim.TimePoint"
                 }
             }
         },
-        "log.TimePoint": {
+        "Helheim.TimePoint": {
             "type": "object",
             "properties": {
                 "endTime": {
